--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "prettier": "3.2.5"
   },
   "jest": {
     "moduleNameMapper": {
